--- a/src/Resources/views/translation.html.twig
+++ b/src/Resources/views/translation.html.twig
@@ -119,7 +119,7 @@
                     <span style="display:none;">{{ messageDomain|trans }}</span>
                     <span>{{ translation }}</span>
                     {# TODO: hardcoded #}
-                    <a class="ui labeled icon button edit topbar_right" href="#" onclick="if(translation = prompt('{{ messageDomain }}')) jQuery.post('{{ ajaxPath }}', { 'locale': '{{ currentLocale.code }}', 'domain': '{{ domain }}', 'messageDomain': '{{ messageDomain }}', 'translation': translation }, function(response) { console.log(response); }); return false;">
+                    <a class="ui labeled icon button edit topbar_right" href="#" onclick="if(translation = prompt('{{ messageDomain }}')) jQuery.post('{{ ajaxPath }}', { 'locale': '{{ currentLocale.code }}', 'domain': '{{ domain }}', 'messageDomain': '{{ messageDomain }}', 'translation': translation }, function(response) { location.reload(); }); return false;">
                         <i class="icon edit"></i> Edit
                     </a>
                 </td>
