--- a/src/Resources/views/translation.html.twig
+++ b/src/Resources/views/translation.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SyliusUiBundle:Layout:sidebar.html.twig' %}
+{% extends 'SyliusAdminBundle::layout.html.twig' %}
 
 {% import '@AcmeSyliusTranslationPlugin/macro.html.twig' as pluginMacro %}
 
@@ -17,48 +17,8 @@
     </style>
 {% endblock %}
 
-{% block flash_messages %}
-    {% include '@SyliusAdmin/_flashes.html.twig' %}
-{% endblock %}
-
-{% block topbar %}
-    <a class="icon item" id="sidebar-toggle" title="{{ 'sylius.ui.toggle_sidebar'|trans }}">
-        <i class="sidebar icon"></i>
-    </a>
-
-    {{ sonata_block_render_event('sylius.admin.layout.topbar_left') }}
-
-    {{ render(url('sylius_admin_partial_channel_index', {'template': '@SyliusAdmin/_channelLinks.html.twig'})) }}
-    {% include '@SyliusAdmin/_search.html.twig' %}
-
-    <div class="ui left floated dividing empty item"></div>
-
-    {{ sonata_block_render_event('sylius.admin.layout.topbar_middle') }}
-
-    <div class="ui right floated dividing empty item"></div>
-
-    {{ sylius_render_notifications_widget() }}
-    {% include '@SyliusAdmin/_security.html.twig' %}
-
-    {{ sonata_block_render_event('sylius.admin.layout.topbar_right') }}
-{% endblock %}
-
-{% block sidebar %}
-    {{ sonata_block_render_event('sylius.admin.layout.sidebar_top') }}
-
-    <a class="item" href="{{ path('sylius_admin_dashboard') }}"><b>Sylius</b></a>
-    {{ knp_menu_render('sylius.admin.main', {'template': 'SyliusUiBundle:Menu:sidebar.html.twig', 'currentClass': 'active'}) }}
-
-    {{ sonata_block_render_event('sylius.admin.layout.sidebar_down') }}
-{% endblock %}
-
-{% block footer %}
-    {{ 'sylius.ui.powered_by'|trans }} <a href="http://sylius.com" target="_blank">Sylius v{{ sylius_meta.version }}</a>
-{% endblock %}
-
 {% block javascripts %}
     {% include 'SyliusUiBundle::_javascripts.html.twig' with {'path': 'assets/admin/js/app.js'} %}
-    <script src="{{ asset('bundles/acmesyliustranslationplugin/translation.js') }}"></script>
     {{ sonata_block_render_event('sylius.admin.layout.javascripts') }}
 
 
@@ -93,8 +53,6 @@
         }
     </script>
 {% endblock %}
-
-
 
 {% block content %}
 {% if locales|length > 1 %}
