--- a/src/Resources/views/_statistics.html.twig
+++ b/src/Resources/views/_statistics.html.twig
@@ -1,18 +1,16 @@
 {% set currentLocale = plugin.getLocale() %}
 {% set defaultLocale = plugin.getSyliusDefaultLocale() %}
 {% set availableLocales = plugin.getSyliusAvailableLocales() %}
-{% set completed = 0 %}
 
 {% for locale in availableLocales %}
     {% set isDefaultLocale = defaultLocale == locale %}
     {% set isCurrent = currentLocale == locale %}
     {% set changeLocale = plugin.setLocale(locale) %}
-    {% set messages = plugin.getMessageCatalogue().all() %}
-    {% set totalMessages = 0 %}
-    {% for domain, domainMessages in messages %}
-        {% set totalMessages = totalMessages + domainMessages|length %}
-    {% endfor %}
-    {% set customMessages = plugin.getCustomMessageCatalogue().all() %}
+    {% set messageCatalogue = checker.getFullMessageCatalogue(locale) %}
+    {% set messages = messageCatalogue.all() %}
+    {% set totalMessages = checker.getTotalMessagesCount(messageCatalogue) %}
+    {% set totalTranslated = checker.getTranslatedMessagesCount(messageCatalogue) %}
+    {% set completed = (totalTranslated / totalMessages) * 100 %}
 
 <div class="ui segment{% if isDefaultLocale %} default{% endif %}{% if isCurrent %} active{% endif %}">
     <div class="ui center aligned four column stackable divided grid">
@@ -49,7 +47,7 @@
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ completed }}%
+                    {{ '%.2f'|format(completed) }}%
                 </div>
                 <div class="label">
                     {{ 'completed'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
