--- a/src/Resources/views/Dashboard/_statistics.html.twig
+++ b/src/Resources/views/Dashboard/_statistics.html.twig
@@ -2,20 +2,64 @@
 {% set defaultLocale = plugin.getSyliusDefaultLocale() %}
 {% set availableLocales = plugin.getSyliusAvailableLocales() %}
 
+{% import '@SyliusUi/Macro/flags.html.twig' as syliusUiFlags %}
+{% import 'SyliusUiBundle:Macro:messages.html.twig' as syliusUiMessages %}
+
+{% set defaultLocaleMessageCatalogue = checker.getFullMessageCatalogue(defaultLocale) %}
+{% set totalMessagesCount = checker.getTotalMessagesCount(defaultLocaleMessageCatalogue) %}
+<div class="ui segment">
+    <div class="ui center aligned four column stackable divided grid">
+        <div class="column">
+            <div class="ui statistic">
+                <div class="value">
+                    {{ availableLocales|length }}
+                </div>
+                <div class="label">
+                    {{ 'sylius_available_locales'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui statistic">
+                <div class="value">
+                    {{ totalMessagesCount }}
+                </div>
+                <div class="label">
+                    {{ 'total_messages_count'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui statistic">
+                <div class="value">
+                    {{ defaultLocaleMessageCatalogue.getDomains()|length }}
+                </div>
+                <div class="label">
+                    {{ 'domains'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui statistic">
+                <div class="value">
+                    {{ '-' }}
+                </div>
+                <div class="label">
+                    {{ 'overall_progress'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% for locale in availableLocales %}
     {% set isDefaultLocale = defaultLocale == locale %}
     {% set isCurrent = currentLocale == locale %}
     {% set changeLocale = plugin.setLocale(locale) %}
     {% set messageCatalogue = checker.getFullMessageCatalogue(locale) %}
-    {% set messages = messageCatalogue.all() %}
     {% set totalMessages = checker.getTotalMessagesCount(messageCatalogue) %}
     {% set totalTranslated = checker.getTranslatedMessagesCount(messageCatalogue) %}
-    {% set completed = (totalTranslated / totalMessages) * 100 %}
-    {# TODO: hardcoded. get resource paths in checker. search in paths domains.[en_US|en].format #}
-    {% if locale.code == 'en_US' %}
-        {% set totalTranslated = totalMessages %}
-        {% set completed = 100 %}
-    {% endif %}
+    {% set progress = (totalTranslated / totalMessages) * 100 %}
 
 <div class="ui segment{% if isDefaultLocale %} default{% endif %}{% if isCurrent %} active{% endif %}">
     <div class="ui center aligned four column stackable divided grid">
@@ -25,17 +69,8 @@
                     <a href="{{ path('sylius_translation_plugin_translation_locale', {'localeCode': locale.code}) }}">{{ locale.code }}</a>
                 </div>
                 <div class="label">
-                    {{ 'locale'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
-                </div>
-            </div>
-        </div>
-        <div class="column">
-            <div class="ui statistic">
-                <div class="value">
-                    {{ messages|length }}
-                </div>
-                <div class="label">
-                    {{ 'total_domains'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ locale.name|trans([], null, currentLocale.code) }}
+                    {{ syliusUiFlags.fromLocaleCode(locale.code) }}
                 </div>
             </div>
         </div>
@@ -45,17 +80,26 @@
                     {{ totalTranslated }}
                 </div>
                 <div class="label">
-                    {{ 'total_messages'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'total_translated'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ '%.2f'|format(completed) }}%
+                    {{ totalMessagesCount - totalTranslated }}
                 </div>
                 <div class="label">
-                    {{ 'completed'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'total_untranslated'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                </div>
+            </div>
+        </div>        <div class="column">
+            <div class="ui statistic">
+                <div class="value">
+                    {{ '%.2f'|format(progress) }}%
+                </div>
+                <div class="label">
+                    {{ 'progress'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
                 </div>
             </div>
         </div>
