--- a/src/Resources/views/Locale/_tree.html.twig
+++ b/src/Resources/views/Locale/_tree.html.twig
@@ -1,16 +1,17 @@
 {% set localeMessageCatalogue = plugin.getMessageCatalogue() %}
 
+<h3 class="ui block header">{{ 'domains'|trans([], 'SyliusTranslationPlugin', defaultLocale.code) }}</h3>
 <div class="ui middle aligned list">
     {% for domain in fullMessageCatalogue.getDomains() %}
         {% set totalMessagesCount = fullMessageCatalogue.all(domain)|length %}
         {% set translatedMessagesCount = localeMessageCatalogue.all(domain)|length %}
         {% set domainProgress = (translatedMessagesCount / totalMessagesCount) * 100 %}
     <div class="item">
-        <i class="folder icon"></i>
+        <i class="icon folder{% if selectedDomain is same as(domain) %} open teal{% endif %}"></i>
         <div class="content">
             <div class="header"><a href="{{ path('sylius_translation_plugin_translation_locale_domain', {'localeCode': currentLocale.code, 'domain': domain}) }}">{{ domain }}</a></div>
             <div class="description">Total: {{ totalMessagesCount }}, translated {{ translatedMessagesCount }}</div>
-            {#
+{#
             <div class="list">
                 {% for translationDomain, translation in fullMessageCatalogue.all(domain) %}
                 <div class="item">
