WIP: implementing features. Worked controller and dummy service

--- a/src/Resources/views/Dashboard/_statistics.html.twig
+++ b/src/Resources/views/Dashboard/_statistics.html.twig
@@ -1,76 +1,81 @@
-{% set currentLocale = plugin.getLocale() %}
-{% set defaultLocale = plugin.getSyliusDefaultLocale() %}
-{% set availableLocales = plugin.getSyliusAvailableLocales() %}
-{% set checker = plugin.getTranslationChecker() %}
+{% set currentLocale = service.getCurrentLocale() %}
+{% set defaultLocale = service.getDefaultLocale() %}
+{% set availableLocales = service.getLocales() %}
+{% set translatedCount = service.getTotalTranslatedCount() %}
+{% set untranslatedCount = service.getTotalUntranslatedCount() %}
+{% set totalCount = translatedCount + untranslatedCount %}
+{% set translationProgress = (translatedCount / totalCount) * 100 %}
+{% set domainCount = service.getTotalDomainCount() %}
+
 
 {% import '@SyliusUi/Macro/flags.html.twig' as syliusUiFlags %}
 {% import 'SyliusUiBundle:Macro:messages.html.twig' as syliusUiMessages %}
 
-{% set defaultLocaleMessageCatalogue = checker.getFullMessageCatalogue(defaultLocale) %}
-{% set totalMessagesCount = checker.getTotalMessagesCount(defaultLocaleMessageCatalogue) %}
 <div class="ui segment">
     <div class="ui center aligned four column stackable divided grid">
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ availableLocales|length }}
+                    {{ availableLocales | length }}
                 </div>
                 <div class="label">
-                    {{ 'sylius_available_locales'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'sylius_available_locales' | trans([], pluginTranslationDomain, currentLocale.code) }}
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ totalMessagesCount }}
+                    {{ totalCount }}
                 </div>
                 <div class="label">
-                    {{ 'total_messages_count'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'total_messages_count' | trans([], pluginTranslationDomain, currentLocale.code) }}
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ defaultLocaleMessageCatalogue.getDomains()|length }}
+                    {{ domainCount }}
                 </div>
                 <div class="label">
-                    {{ 'domains'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'domains' | trans([], pluginTranslationDomain, currentLocale.code) }}
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="ui statistic">
                 <div class="value">
-                    {{ '-' }}
+                    {{ '%.2f' | format(translationProgress) }}%
                 </div>
                 <div class="label">
-                    {{ 'overall_progress'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                    {{ 'overall_progress' | trans([], pluginTranslationDomain, currentLocale.code) }}
                 </div>
             </div>
         </div>
+    </div>
+    <div class="ui bottom attached progress" data-percent="{{ '%.2f' | format(translationProgress) }}">
+        <div class="bar"></div>
     </div>
 </div>
 
 {% for locale in availableLocales %}
     {% set isDefaultLocale = defaultLocale == locale %}
     {% set isCurrent = currentLocale == locale %}
-    {% set changeLocale = plugin.setLocale(locale) %}
-    {% set messageCatalogue = checker.getFullMessageCatalogue(locale) %}
-    {% set totalMessages = checker.getTotalMessagesCount(messageCatalogue) %}
-    {% set totalTranslated = checker.getTranslatedMessagesCount(messageCatalogue) %}
-    {% set progress = (totalTranslated / totalMessages) * 100 %}
+    {% set translatedCount = service.getTotalTranslatedCount(locale) %}
+    {% set untranslatedCount = service.getTotalUntranslatedCount(locale) %}
+    {% set totalCount = translatedCount + untranslatedCount %}
+    {% set translationProgress = (translatedCount / totalCount) * 100 %}
 
     <div class="ui segment{% if isDefaultLocale %} default{% endif %}{% if isCurrent %} active{% endif %}">
         <div class="ui center aligned four column stackable divided grid">
             <div class="column">
                 <div class="ui statistic">
                     <div class="value">
-                        <a href="{{ path('sylius_translation_plugin_translation_locale', {'localeCode': locale.code}) }}">{{ locale.code }}</a>
+                        <a href="{{ path('yaroslavche_sylius_translation_plugin_locale', {'localeCode': locale.code}) }}">{{ locale.code }}</a>
                     </div>
                     <div class="label">
-                        {{ locale.name|trans([], null, currentLocale.code) }}
+                        {{ locale.name | trans([], null, currentLocale.code) }}
                         {{ syliusUiFlags.fromLocaleCode(locale.code) }}
                     </div>
                 </div>
@@ -78,37 +83,36 @@
             <div class="column">
                 <div class="ui statistic">
                     <div class="value">
-                        {{ totalTranslated }}
+                        {{ translatedCount }}
                     </div>
                     <div class="label">
-                        {{ 'total_translated'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                        {{ 'total_translated' | trans([], pluginTranslationDomain, currentLocale.code) }}
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="ui statistic">
                     <div class="value">
-                        {{ totalMessagesCount - totalTranslated }}
+                        {{ untranslatedCount }}
                     </div>
                     <div class="label">
-                        {{ 'total_untranslated'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                        {{ 'total_untranslated' | trans([], pluginTranslationDomain, currentLocale.code) }}
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="ui statistic">
                     <div class="value">
-                        {{ '%.2f'|format(progress) }}%
+                        {{ '%.2f' | format(translationProgress) }}%
                     </div>
                     <div class="label">
-                        {{ 'progress'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                        {{ 'progress' | trans([], pluginTranslationDomain, currentLocale.code) }}
                     </div>
                 </div>
             </div>
         </div>
-        <div class="ui bottom attached progress" data-percent="{{ '%.2f'|format(progress) }}">
+        <div class="ui bottom attached progress" data-percent="{{ '%.2f' | format(translationProgress) }}">
             <div class="bar"></div>
         </div>
     </div>
 {% endfor %}
-{% set changeLocale = plugin.setLocale(defaultLocale) %}
