--- a/src/Resources/views/dashboard.html.twig
+++ b/src/Resources/views/dashboard.html.twig
@@ -1,19 +1,12 @@
 {% extends 'YaroslavcheSyliusTranslationPlugin::layout.html.twig' %}
 
-{% set defaultLocale = plugin.getSyliusDefaultLocale() %}
-{% set pluginVersion = '0.1.1' %}
-
-{% set title = 'dashboard_title' | trans([], 'SyliusTranslationPlugin', defaultLocale.code) %}
+{% set defaultLocale = service.getDefaultLocale() %}
+{% set title = 'dashboard_title' | trans([], pluginTranslationDomain, defaultLocale.code) %}
 {% set description = 'dashboard_description' | trans({
     '%version%': pluginVersion
-}, 'SyliusTranslationPlugin', defaultLocale.code) %}
+}, pluginTranslationDomain, defaultLocale.code) %}
 
 {% block content %}
-
-    {% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' with {
-        'title' : title,
-        'description' : description
-    } %}
+    {% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' %}
     {% include 'YaroslavcheSyliusTranslationPlugin:Dashboard:_statistics.html.twig' %}
-
 {% endblock %}
