--- a/src/Resources/views/locale.html.twig
+++ b/src/Resources/views/locale.html.twig
@@ -1,43 +1,71 @@
 {% extends 'YaroslavcheSyliusTranslationPlugin::layout.html.twig' %}
 
-{# TODO: defaultLocale depends on user _locale #}
-{% set defaultLocale = plugin.getSyliusDefaultLocale() %}
-{% set currentLocale = plugin.getLocale() %}
-{% set fullMessageCatalogue = plugin.getTranslationChecker().getFullMessageCatalogue(currentLocale) %}
-{% set customMessageCatalogue = plugin.getCustomMessageCatalogue(currentLocale) %}
-{% set selectedDomain = null %}
-{% if app.request.attributes.get('domain') in fullMessageCatalogue.getDomains() %}
-    {% set selectedDomain = app.request.attributes.get('domain') %}
-{% else %}
-    {% set selectedDomain = 'messages' %}
-{% endif %}
+{% set defaultLocale = service.getDefaultLocale() %}
+{% set currentLocale = service.getCurrentLocale() %}
 
 {% set title = currentLocale.name | trans([], null, defaultLocale.code) %}
 {% set description = 'translation_overview' | trans({
     '%someData%': ''
-}, 'SyliusTranslationPlugin', defaultLocale.code) %}
+}, pluginTranslationDomain, defaultLocale.code) %}
 
 {% block content %}
-
-    {% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' with {
-        'title' : title,
-        'description' : description
-    } %}
-    {% set localeCodes = ['en_US'] %}
-    {% if currentLocale.code in localeCodes %} * {{ currentLocale.code }} not working properly. not defined fallback catalogues{% endif %}
+    {% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' %}
+    {#{% set localeCodes = ['en_US'] %}#}
+    {#{% if currentLocale.code in localeCodes %} * {{ currentLocale.code }} not working properly. not defined fallback catalogues{% endif %}#}
     <div class="ui two column stackable grid">
         <div class="four wide column">
-            {% include 'YaroslavcheSyliusTranslationPlugin:Locale:_domains.html.twig' %}
+            domains
+            {#{% include 'YaroslavcheSyliusTranslationPlugin:Locale:_domains.html.twig' %}#}
         </div>
         <div class="twelve wide column">
-            {% set messages = fullMessageCatalogue.all(selectedDomain) %}
-            {% set customMessages = customMessageCatalogue.all(selectedDomain) %}
-            {% include 'YaroslavcheSyliusTranslationPlugin:Locale:_messages.html.twig' with {
-                'messages' : messages,
-                'customMessages' : customMessages,
-                'localeCode' : currentLocale.code,
-                'domain' : selectedDomain
-            } %}
+            messages
+            {#{% set messages = fullMessageCatalogue.all(selectedDomain) %}#}
+            {#{% set customMessages = customMessageCatalogue.all(selectedDomain) %}#}
+            {#{% include 'YaroslavcheSyliusTranslationPlugin:Locale:_messages.html.twig' with {#}
+                {#'messages' : messages,#}
+                {#'customMessages' : customMessages,#}
+                {#'localeCode' : currentLocale.code,#}
+                {#'domain' : selectedDomain#}
+            {#} %}#}
         </div>
     </div>
 {% endblock %}
+
+{#{% set fullMessageCatalogue = plugin.getTranslationChecker().getFullMessageCatalogue(currentLocale) %}#}
+{#{% set customMessageCatalogue = plugin.getCustomMessageCatalogue(currentLocale) %}#}
+{#{% set selectedDomain = null %}#}
+{#{% if app.request.attributes.get('domain') in fullMessageCatalogue.getDomains() %}#}
+    {#{% set selectedDomain = app.request.attributes.get('domain') %}#}
+{#{% else %}#}
+    {#{% set selectedDomain = 'messages' %}#}
+{#{% endif %}#}
+
+{#{% set title = currentLocale.name | trans([], null, defaultLocale.code) %}#}
+{#{% set description = 'translation_overview' | trans({#}
+    {#'%someData%': ''#}
+{#}, 'SyliusTranslationPlugin', defaultLocale.code) %}#}
+
+{#{% block content %}#}
+
+    {#{% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' with {#}
+        {#'title' : title,#}
+        {#'description' : description#}
+    {#} %}#}
+    {#{% set localeCodes = ['en_US'] %}#}
+    {#{% if currentLocale.code in localeCodes %} * {{ currentLocale.code }} not working properly. not defined fallback catalogues{% endif %}#}
+    {#<div class="ui two column stackable grid">#}
+        {#<div class="four wide column">#}
+            {#{% include 'YaroslavcheSyliusTranslationPlugin:Locale:_domains.html.twig' %}#}
+        {#</div>#}
+        {#<div class="twelve wide column">#}
+            {#{% set messages = fullMessageCatalogue.all(selectedDomain) %}#}
+            {#{% set customMessages = customMessageCatalogue.all(selectedDomain) %}#}
+            {#{% include 'YaroslavcheSyliusTranslationPlugin:Locale:_messages.html.twig' with {#}
+                {#'messages' : messages,#}
+                {#'customMessages' : customMessages,#}
+                {#'localeCode' : currentLocale.code,#}
+                {#'domain' : selectedDomain#}
+            {#} %}#}
+        {#</div>#}
+    {#</div>#}
+{#{% endblock %}#}
