--- a/src/Resources/views/Locale/_domains.html.twig
+++ b/src/Resources/views/Locale/_domains.html.twig
@@ -1,18 +1,35 @@
-{% set localeMessageCatalogue = plugin.getMessageCatalogue() %}
-
 <div class="ui segment">
     <div class="ui two column stackable grid">
         <div class="ten wide column">
             <h2 class="header">
-                {{ 'domains'|trans([], 'SyliusTranslationPlugin', defaultLocale.code) }}
+                {{ 'domains_list' | trans([], pluginTranslationDomain, defaultLocale.code) }}
             </h2>
         </div>
         <div class="six wide column">
-            <div class="ui green inverted button tiny" style="float: right;" onclick="SyliusTranslationPlugin.addDomain(jQuery('#addDomainModal'));">
+            <div class="ui green inverted button tiny" style="float: right;"
+                 onclick="SyliusTranslationPlugin.addDomain(jQuery('#addDomainModal'));">
                 <i class="add icon"></i>
-                Add
+                {{ 'add_domain' | trans([], pluginTranslationDomain, defaultLocale.code) }}
             </div>
         </div>
+    </div>
+    <div class="ui middle aligned list">
+        {% for domain in localeMessageCatalogue.getDomains() %}
+            {% set translatedMessagesCount = localeMessageCatalogue.getTranslatedMessages(domain) | length %}
+            {% set untranslatedMessagesCount = localeMessageCatalogue.getUntranslatedMessages(domain) | length %}
+            {% set totalMessagesCount = translatedMessagesCount + untranslatedMessagesCount %}
+            {% set domainTranslationProgress = (translatedMessagesCount / totalMessagesCount) * 100 %}
+            <div class="item">
+                <i class="icon folder{% if selectedDomain is same as(domain) %} open teal{% endif %}"></i>
+                <div class="content">
+                    <div class="header">
+                        <a href="{{ path('yaroslavche_sylius_translation_plugin_locale', {'localeCode': currentLocale.code, 'domain': domain}) }}">{{ domain }}</a>
+                    </div>
+                    <div class="description">Total: {{ totalMessagesCount }},
+                        Translated: {{ translatedMessagesCount }} ({{ '%.2f' | format(domainTranslationProgress) }}%)</div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </div>
 <div class="ui basic modal" id="addDomainModal" data-locale-code="{{ currentLocale.code }}">
@@ -25,7 +42,7 @@
             <div class="sixteen wide column">
                 <div class="ui labeled inverted input">
                     <div class="ui label">
-                        {{ 'domain'|trans([], 'SyliusTranslationPlugin', currentLocale.code) }}
+                        {{ 'domain' | trans([], pluginTranslationDomain, currentLocale.code) }}
                     </div>
                     <input placeholder="domain" id="addDomainModal_domainInput" type="text">
                 </div>
@@ -42,34 +59,4 @@
             Apply
         </div>
     </div>
-</div>
-<div class="ui middle aligned list">
-    {% for domain in fullMessageCatalogue.getDomains() %}
-        {% set totalMessagesCount = fullMessageCatalogue.all(domain) | length %}
-        {% set translatedMessagesCount = localeMessageCatalogue.all(domain) | length %}
-        {% set domainProgress = (translatedMessagesCount / totalMessagesCount) * 100 %}
-        <div class="item">
-            <i class="icon folder{% if selectedDomain is same as(domain) %} open teal{% endif %}"></i>
-            <div class="content">
-                <div class="header">
-                    <a href="{{ path('sylius_translation_plugin_translation_locale_domain', {'localeCode': currentLocale.code, 'domain': domain}) }}">{{ domain }}</a>
-                </div>
-                <div class="description">Total:
-                    {{ totalMessagesCount }}, translated
-                    {{ translatedMessagesCount }}</div>
-                {#
-            <div class="list">
-                {% for translationDomain, translation in fullMessageCatalogue.all(domain) %}
-                <div class="item">
-                    <i class="entry icon"></i>
-                    <div class="content">
-                        <div class="header" data-translation="{{ translation }}">{{ translationDomain }}</div>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            #}
-            </div>
-        </div>
-    {% endfor %}
 </div>
