WIP: added cache array for locale message catalogue. IDK is it good idea

--- a/src/Resources/views/locale.html.twig
+++ b/src/Resources/views/locale.html.twig
@@ -8,7 +8,7 @@
     '%someData%': ''
 }, pluginTranslationDomain, defaultLocale.code) %}
 
-{% set localeMessageCatalogue = service.getCurrentLocaleMessageCatalogue() %}
+{% set localeMessageCatalogue = service.getLocaleMessageCatalogue(currentLocale) %}
 
 {% block content %}
     {% include 'YaroslavcheSyliusTranslationPlugin::_header.html.twig' %}
